--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 #ignore all .o files
 *.o
 
+#ignore bazel output
+/bazel-StateEstimation
+/bazel-bin
+/bazel-out
+/bazel-testlogs
+
 #ignore Eigen
 /Eigen
 /unsupported
